--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,5 +1,5 @@
 .navBar {
-  box-shadow: 0 4px 4px -3px #3a3a3aa8;
+  box-shadow: 0 4px 4px -3px #3a3a3aa8!important;
   z-index:999999!important;
 }
 
